--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -37,7 +37,15 @@
     background: #bbd0e4;
     border-radius: 5px;
   }
-  
+
+  .read {
+    clear: both;
+    margin-bottom: 5px;
+    position: relative;
+    padding: 5px;
+    background: #ffffff;
+    border-radius: 5px;
+  } 
   .message input {
     position: absolute;
     top: 8px; left: 10px;
