--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -43,7 +43,7 @@
     margin-bottom: 5px;
     position: relative;
     padding: 5px;
-    background: #ffffff;
+    background: #7f9cb8;
     border-radius: 5px;
   } 
   .message input {
